--- a/UC_config.json
+++ b/UC_config.json
@@ -13,6 +13,10 @@
                 "To": "../"
             }
         ],
-        "Delete": []
+        "Delete": [
+            {
+                "Location": "../The very good.txt"
+            }
+        ]
     }
 }
